<resources>

    <string name="dummy_empty_text">No NFC Tags.</string>
    <string name="dummy_empty_text1">"Tap "</string>
    <string name="dummy_empty_text2">" to add one."</string>
    <string name="dummy_username">Karhades</string>
    <string name="dummy_email">xbroodlordx@gmail.com</string>

    <string name="app_name">Tag it!</string>
    <string name="label_details">Details</string>
    <string name="label_discovered">Discovered</string>
    <string name="label_date_discovered">Date discovered</string>
    <string name="label_difficulty">Difficulty</string>
    <string name="label_empty">N/A</string>
    <string name="popup_window_delete">Delete</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_tag_it">TAG IT</string>
    <string name="text_share_hint">Tap devices to share the fun.</string>
    <string name="text_empty1">Nothing to track.</string>
    <string name="text_empty2">Tap \'CREATE\' tab to add one.</string>
    <string name="context_delete">Delete</string>
    <string name="context_select_all">Select all</string>
    <string name="context_clear_selection">Clear selection</string>
    <string name="navigation_track">Track</string>
    <string name="navigation_share">Share</string>
    <string name="navigation_create">Create</string>
    <string name="navigation_settings">Settings</string>
    <string name="hint_title">Title</string>

    <string-array name="array_difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="tab_names">
        <item>TRACK</item>
        <item>SHARE</item>
        <item>CREATE</item>
    </string-array>

    <plurals name="snackbar_deleted_plural">
        <item quantity="one">Tag deleted</item>
        <item quantity="other">Tags deleted</item>
    </plurals>

    <plurals name="dialog_deleted_plural">
        <item quantity="one">Delete tag?</item>
        <item quantity="other">Delete tags?</item>
    </plurals>
</resources>
