...
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_difficulty" />

                            <Spinner
                                android:id="@+id/create_tag_spinner"
                                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:popupBackground="@android:color/white" />
                        </LinearLayout>

...
